[FEAT] generate updates in filters and add contacts endpoint & windget
